@@ -1,5 +1,7 @@
 # Regression test specification for the ds390 target running with uCsim
 
+CC_FOR_BUILD = $(CC)
+
 ifndef DEV_NULL
   DEV_NULL = /dev/null
 endif
@@ -13,8 +15,10 @@ else
 
   S51 = $(shell if [ -f $(S51A) ]; then echo $(S51A); else echo $(S51B); fi)
 
+ifndef CROSSCOMPILING
   SDCCFLAGS += --nostdinc -I$(top_srcdir)
-  LINKFLAGS += --nostdlib -L$(top_builddir)/device/lib/build/ds390 
+  LINKFLAGS += --nostdlib -L$(top_builddir)/device/lib/build/ds390
+endif
 endif
 
 SDCCFLAGS +=-mds390 --less-pedantic -DREENTRANT=__reentrant -Wl-r
@@ -39,14 +43,14 @@ $(PORT_CASES_DIR)/%$(OBJEXT): fwk/lib/%.c
 	$(SDCC) $(SDCCFLAGS) -c $< -o $@
 
 # run simulator with 25 seconds timeout
-%.out: %$(BINEXT) $(CASES_DIR)/timeout$(EXEEXT)
+%.out: %$(BINEXT) $(CASES_DIR)/timeout
 	mkdir -p $(dir $@)
 	-$(CASES_DIR)/timeout$(EXEEXT) 25 $(S51) -tds390f -S in=$(DEV_NULL),out=$@ $< < $(PORTS_DIR)/ds390/uCsim.cmd > $(@:.out=.sim) || \
           echo -e --- FAIL: \"timeout, simulation killed\" in $(<:$(BINEXT)=.c)"\n"--- Summary: 1/1/1: timeout >> $@
 	python $(srcdir)/get_ticks.py < $(@:.out=.sim) >> $@
 	-grep -n FAIL $@ /dev/null || true
 
-$(CASES_DIR)/timeout$(EXEEXT): fwk/lib/timeout.c
-	$(CC) $(CFLAGS) $< -o $@
+$(CASES_DIR)/timeout: fwk/lib/timeout.c
+	$(CC_FOR_BUILD) $(CFLAGS) $< -o $@
 
 _clean:
